# gym_av_aloha

./: .gitignore  .gitmodules  README.md  pyproject.toml
gym_av_aloha/assets/: task_color_cubes.xml
gym_av_aloha/datasets/: __init__.py  av_aloha_dataset.py  multi_av_aloha_dataset.py
gym_av_aloha/env/: robot.py  sim_config.py  sim_env.py
gym_av_aloha/env/tasks/: color_cubes_env.py  cube_transfer_env.py  hook_package_env.py  peg_insertion_env.py  pour_test_tube_env.py  slot_insertion_env.py  thread_needle_env.py
gym_av_aloha/kinematics/: diff_ik.py  grad_ik.py
gym_av_aloha/scripts/: record_sim_episodes.py  teleoperate.py
gym_av_aloha/vr/: headset.py
scripts/: benchmark_datasets.py  convert_lerobot_to_avaloha.py  convert_lerobot_to_zarr.py  create_av_aloha_sim_dataset.py  create_dataset.py  test_dataset.py
